fix initial display to remove the immeditae flicker, added some additional clarifying comments

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
 #speechArrow {
     position:relative;
     left: 40px;
-    top: 5px;
     display:none;
 }
 
